v2/README.md
# V2 - 38.1mm trackball (1.5 inch)

<img src="./images/v2-trackball.jpg" width="600"/>

This design consists of 4 parts, see the mechanicals section for the explanation. It prints without supports and require minimal assembly.
Even though the top part consists of 2 separate parts, it looks like a unibody part after assembly.

## Mechanicals

<img src="./images/v2-38mm-design-view.png" width="600"/>

1. v2-38mm-top-buttons.step: the top frame with buttons and a cut-out for the track ball support insert (part #2)
2. v2-38mm-top-trackball.step: the trackball insert where the bearings and the trackball should be placed. It fits in the cut-out of the part #1
3. v2-38mm-bottom.step: the bottom part of the case, where the pcb should be placed
4. (OPTIONAL) v2-38mm-cover-keycaps.step: a cover to the top, so you can add another finish to the top of the trackball and keycaps. These can be printed in different colors for some extra personalization and/or with a smaller layer height for a smoother surface :)

## Printing instructions/remarks

**The models print without the need of any support. Using supports will likely ruin the print, unless you really know what you are doing!**

I have printed it in both PLA and PETG and both work fine. I recommended using a layer height of 0.2mm.

Part #1 should be printed with the buttons facing the build plate (so upside-down), and the remaining parts should be printed in the regular orientation.

## BoM

- [A Ploopy Adept kit](https://ploopy.co/shop/adept-trackball-full-kit/)
- 4 M2 x 4mm thread inserts. I used [these ones](https://www.amazon.de/dp/B088QJG676/ref=pe_27091401_487027711_TE_SCE_dp_i1?th=1)
- 4 M2 x 10mm countersunk screws. I used [these ones](https://www.amazon.de/-/en/gp/product/B0D6QXRH6H/ref=ppx_od_dt_b_asin_title_s00?ie=UTF8&th=1)
- A 38.1mm trackball (1.5 inch). I have used my Ploopy Nano trackball. You can either buy a billiard ball or something more fit for purpose like this ones from [gamingtrackball](https://www.gamingtrackball.com/products/yellow-and-silver-add-on-balls)
- 3 BTU bearings [KU-B8-OFK R053010810](https://store.boschrexroth.com/BALL-TRANSFER-UNIT_R053010810?cclcl=en_MY)
- (OPTIONAL) Superglue to put some of the parts together

## Assembly

See Mechanicals section above for the part numbers.

1. Print all the parts
2. (OPTIONAL) Glue part #4 to part #1
3. Insert the 3 BTU bearings on part #2. There is some clearance, so you should not need to push very hard, only a bit of force is necessary.
4. Insert part #2 into the cut-out of part #1, making sure that the flat part of the optics cut-out is the round edge of the case (see picture below). Make sure that the bottom aligns perfectly. The part should stay in place, but you may choose to glue them together, if you prefer.

<img src="./images/v2-38mm-assembly-top.png" width="300"/>

5. Insert the 4 thread inserts in the 4 holes on the corners of the bottom of part #1, using a heat-insertion tool or a soldering iron. I would recommend a proper heat-insertion tool like [this one](https://www.amazon.de/dp/B0C5CC2QB9/ref=pe_27091401_487027711_TE_SCE_dp_i1), since these thread inserts are quite small
6. Place the PCB in the sunken area of part #3
7. Place the top part over the bottom part making sure that the optics are aligned correctly. The bottom part has some small guides that should help placing the top correctly and holding it in place.
8. Screw the bottom to the top. Start by screwing all the screws half in and then tighten them up.
